# ioctl

./: Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
ioctl/: fn.apm_ioc_standby.html  fn.apm_ioc_suspend.html  fn.btrfs_ioc_balance_ctl.html  fn.btrfs_ioc_clone.html  fn.btrfs_ioc_default_subvol.html  fn.btrfs_ioc_get_fslabel.html  fn.btrfs_ioc_quota_rescan_wait.html  fn.btrfs_ioc_scrub_cancel.html  fn.btrfs_ioc_set_fslabel.html  fn.btrfs_ioc_start_sync.html  fn.btrfs_ioc_subvol_getflags.html  fn.btrfs_ioc_subvol_setflags.html  fn.btrfs_ioc_sync.html  fn.btrfs_ioc_trans_end.html  fn.btrfs_ioc_trans_start.html  fn.btrfs_ioc_wait_sync.html  fn.cm_iocardoff.html  fn.cm_iocgstatus.html  fn.cm_iocsrdr.html  fn.cxl_ioctl_get_process_element.html  fn.cz_boot_data.html  fn.cz_boot_end.html  fn.cz_boot_start.html  fn.cz_nboards.html  fn.cz_test.html  fn.drm_ioctl_agp_acquire.html  fn.drm_ioctl_agp_release.html  fn.drm_ioctl_drop_master.html  fn.drm_ioctl_mode_rmfb.html  fn.drm_ioctl_radeon_cp_idle.html  fn.drm_ioctl_radeon_cp_reset.html  fn.drm_ioctl_radeon_cp_resume.html  fn.drm_ioctl_radeon_cp_start.html  fn.drm_ioctl_radeon_flip.html  fn.drm_ioctl_radeon_reset.html  fn.drm_ioctl_radeon_swap.html  fn.drm_ioctl_set_master.html  fn.eviocgabs.html  fn.eviocgbit.html  fn.eviocgeffects.html  (+543 more)
ioctl/libc/: constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_NETLINK.html  constant.AF_PACKET.html  constant.AF_UNIX.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  (+1302 more)
(+11 files in other folders)
