[package]
name = "ioctl"
version = "0.3.3"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "IO Control for POSIX-and-beyond systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmr/ioctl"
documentation = "https://cmr.github.io/ioctl"

[dependencies]
bitflags = "*"
libc = "*"

[features]
unstable = []
